hydroflow/tests/compile-fail/surface_fold_keyed_generics_bad.stderr
error[E0271]: expected `Drain<'_, &str>` to be an iterator that yields `(_, _)`, but it yields `&str`
 --> tests/compile-fail/surface_fold_keyed_generics_bad.rs:3:9
  |
3 |           source_iter(["hello", "world"])
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `(_, _)`, found `&str`
4 |               -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |  ________________-
5 | |                 *old += val;
6 | |             })
  | |______________- required by a bound introduced by this call
  |
  = note:  expected tuple `(_, _)`
          found reference `&str`
note: required by a bound in `check_input`
 --> tests/compile-fail/surface_fold_keyed_generics_bad.rs:4:16
  |
4 |               -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |  ________________^
5 | |                 *old += val;
6 | |             })
  | |______________^ required by this bound in `check_input`

error[E0271]: expected `Drain<'_, &str>` to be an iterator that yields `(_, _)`, but it yields `&str`
 --> tests/compile-fail/surface_fold_keyed_generics_bad.rs:4:16
  |
4 |               -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |  ________________^
5 | |                 *old += val;
6 | |             })
  | |______________^ expected `(_, _)`, found `&str`
  |
  = note:  expected tuple `(_, _)`
          found reference `&str`
note: required by a bound in `check_input`
 --> tests/compile-fail/surface_fold_keyed_generics_bad.rs:4:16
  |
4 |               -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |  ________________^
5 | |                 *old += val;
6 | |             })
  | |______________^ required by this bound in `check_input`

error[E0271]: expected `new` to be a fn item that returns `usize`, but it returns `String`
 --> tests/compile-fail/surface_fold_keyed_generics_bad.rs:4:49
  |
4 |               -> fold_keyed::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |                  -                                ^^^^^^^^^^^ expected `usize`, found `String`
  |  ________________|
  | |
5 | |                 *old += val;
6 | |             })
  | |______________- required by a bound introduced by this call
  |
note: required by a bound in `std::collections::hash_map::Entry::<'a, K, V>::or_insert_with`
 --> $RUST/std/src/collections/hash/map.rs
  |
  |     pub fn or_insert_with<F: FnOnce() -> V>(self, default: F) -> &'a mut V {
  |                                          ^ required by this bound in `Entry::<'a, K, V>::or_insert_with`
